Bug 393484 - Discover shut down after updating
Summary: Discover shut down after updating
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.12.3
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: drkonqi
: 390926 392386 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-04-24 23:47 UTC by jani74keinanen
Modified: 2018-06-01 16:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jani74keinanen 2018-04-24 23:47:05 UTC
Application: plasma-discover (5.12.3)

Qt Version: 5.10.0
Frameworks Version: 5.45.0
Operating System: Linux 4.13.0-39-generic x86_64
Distribution: KDE neon User Edition 5.12

-- Information about the crash:
- What I was doing when the application crashed:
it was updating and then I click 'Plasma-lisäosat'-button and it was searching things for the Plasma and then just turn off.

The crash does not seem to be reproducible.

-- Backtrace:
Application: Löydä (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f0248bb98c0 (LWP 7087))]

Thread 14 (Thread 0x7f0180b32700 (LWP 8124)):
#0  0x00007ffc1852ba44 in clock_gettime ()
#1  0x00007f0244019876 in __GI___clock_gettime (clock_id=clock_id@entry=1, tp=tp@entry=0x7f0180b31a60) at ../sysdeps/unix/clock_gettime.c:115
#2  0x00007f0244c3aed1 in qt_clock_gettime (ts=0x7f0180b31a60, clock=<optimized out>) at kernel/qelapsedtimer_unix.cpp:111
#3  do_gettime (frac=<synthetic pointer>, sec=<synthetic pointer>) at kernel/qelapsedtimer_unix.cpp:166
#4  qt_gettime () at kernel/qelapsedtimer_unix.cpp:175
#5  0x00007f0244c396c9 in QTimerInfoList::updateCurrentTime (this=this@entry=0x7f01640024a0) at kernel/qtimerinfo_unix.cpp:91
#6  0x00007f0244c39c35 in QTimerInfoList::timerWait (this=0x7f01640024a0, tm=...) at kernel/qtimerinfo_unix.cpp:388
#7  0x00007f0244c3b33e in timerSourcePrepareHelper (timeout=0x7f0180b31b34, src=<optimized out>) at kernel/qeventdispatcher_glib.cpp:132
#8  timerSourcePrepare (source=<optimized out>, timeout=0x7f0180b31b34) at kernel/qeventdispatcher_glib.cpp:165
#9  0x00007f023ed5791d in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007f023ed582bb in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007f0244c3b5cb in QEventDispatcherGlib::processEvents (this=0x7f01640039c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#13 0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7f0180b31d00, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#14 0x00007f0244a02554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#15 0x00007f0244a076eb in QThreadPrivate::start (arg=0x42375a0) at thread/qthread_unix.cpp:376
#16 0x00007f0240e506ba in start_thread (arg=0x7f0180b32700) at pthread_create.c:333
#17 0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 13 (Thread 0x7f018173d700 (LWP 8108)):
#0  0x00007f0244c3b511 in postEventSourcePrepare (s=0x7f01700028c0, timeout=0x7f018173cb34) at kernel/qeventdispatcher_glib.cpp:265
#1  0x00007f023ed5791d in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023ed582bb in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f0244c3b5cb in QEventDispatcherGlib::processEvents (this=0x7f0170002ca0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7f018173cd00, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#6  0x00007f0244a02554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#7  0x00007f0244a076eb in QThreadPrivate::start (arg=0x7f0190008af0) at thread/qthread_unix.cpp:376
#8  0x00007f0240e506ba in start_thread (arg=0x7f018173d700) at pthread_create.c:333
#9  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 12 (Thread 0x7f017af37700 (LWP 7103)):
#0  __libc_enable_asynccancel () at ../sysdeps/unix/sysv/linux/x86_64/cancellation.S:71
#1  0x00007f0243fff742 in poll () at ../sysdeps/unix/syscall-template.S:84
#2  0x00007f023ed5838c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f0244c3b5cb in QEventDispatcherGlib::processEvents (this=0x7f01680008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7f017af36d00, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#6  0x00007f0244a02554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#7  0x00007f0244a076eb in QThreadPrivate::start (arg=0x3547370) at thread/qthread_unix.cpp:376
#8  0x00007f0240e506ba in start_thread (arg=0x7f017af37700) at pthread_create.c:333
#9  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 11 (Thread 0x7f0181f3e700 (LWP 7098)):
#0  0x00007f0243fff74d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f023ed5838c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0244c3b5cb in QEventDispatcherGlib::processEvents (this=0x7f016c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7f0181f3dd00, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x00007f0244a02554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f0244a076eb in QThreadPrivate::start (arg=0x2a5cf00) at thread/qthread_unix.cpp:376
#7  0x00007f0240e506ba in start_thread (arg=0x7f0181f3e700) at pthread_create.c:333
#8  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 10 (Thread 0x7f017bfff700 (LWP 7097)):
#0  0x00007f0243ffb27d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f023ed9b6f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023ed57e74 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f023ed58330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f023ed58712 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f018bb689d6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#6  0x00007f023ed7ebb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f0240e506ba in start_thread (arg=0x7f017bfff700) at pthread_create.c:333
#8  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7f0183953700 (LWP 7096)):
#0  0x00007f0243ffb27d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f023ed9b6f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023ed57e74 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f023ed58330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f023ed584d9 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f023ed7ebb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f0240e506ba in start_thread (arg=0x7f0183953700) at pthread_create.c:333
#8  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7f0188d17700 (LWP 7095)):
#0  __GI___pthread_getspecific (key=3) at pthread_getspecific.c:30
#1  0x00007f023ed7f060 in g_thread_self () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023ed5848d in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0244c3b5cb in QEventDispatcherGlib::processEvents (this=0x7f01840008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7f0188d16d00, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x00007f0244a02554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f0244a076eb in QThreadPrivate::start (arg=0x2a01660) at thread/qthread_unix.cpp:376
#7  0x00007f0240e506ba in start_thread (arg=0x7f0188d17700) at pthread_create.c:333
#8  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7f019515b700 (LWP 7094)):
#0  0x00007f023ed9ca94 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f023ed5823d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0244c3b5cb in QEventDispatcherGlib::processEvents (this=0x7f01900008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7f019515ac90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x00007f0244a02554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f0247dfc1c6 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#7  0x00007f0244a076eb in QThreadPrivate::start (arg=0x275e530) at thread/qthread_unix.cpp:376
#8  0x00007f0240e506ba in start_thread (arg=0x7f019515b700) at pthread_create.c:333
#9  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7f0198b43700 (LWP 7093)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f019e47d48b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#2  0x00007f019e47d397 in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#3  0x00007f0240e506ba in start_thread (arg=0x7f0198b43700) at pthread_create.c:333
#4  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f0199aac700 (LWP 7092)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f019e47d48b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#2  0x00007f019e47d397 in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#3  0x00007f0240e506ba in start_thread (arg=0x7f0199aac700) at pthread_create.c:333
#4  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f0225d11700 (LWP 7091)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f0225e8edb4 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#2  0x00007f0225e8edf9 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#3  0x00007f0240e506ba in start_thread (arg=0x7f0225d11700) at pthread_create.c:333
#4  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f02275ef700 (LWP 7090)):
#0  0x00007f0243ffb27d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f023ed9b6f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023ed57e74 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f023ed58330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f0244c3b5cb in QEventDispatcherGlib::processEvents (this=0x7f02200008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7f02275eece0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#7  0x00007f0244a02554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#8  0x00007f02455dda35 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#9  0x00007f0244a076eb in QThreadPrivate::start (arg=0x23f2470) at thread/qthread_unix.cpp:376
#10 0x00007f0240e506ba in start_thread (arg=0x7f02275ef700) at pthread_create.c:333
#11 0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f022c8aa700 (LWP 7089)):
#0  0x00007f023ed9ca79 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f023ed5834e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0244c3b5cb in QEventDispatcherGlib::processEvents (this=0x7f02280008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7f022c8a9cd0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x00007f0244a02554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f02469032c5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f0244a076eb in QThreadPrivate::start (arg=0x7f0246b77d60) at thread/qthread_unix.cpp:376
#8  0x00007f0240e506ba in start_thread (arg=0x7f022c8aa700) at pthread_create.c:333
#9  0x00007f024400b41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f0248bb98c0 (LWP 7087)):
[KCrash Handler]
#6  __GI___libc_free (mem=0xffffffff) at malloc.c:2951
#7  0x00007f0244a08b21 in QArrayData::deallocate (data=<optimized out>, objectSize=objectSize@entry=2, alignment=alignment@entry=8) at tools/qarraydata.cpp:167
#8  0x00007f0247a9270a in QTypedArrayData<unsigned short>::deallocate (data=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qarraydata.h:237
#9  QString::~QString (this=0x7ffc1844ccc0, __in_chrg=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qstring.h:1119
#10 QDebug::operator<< (t=0x7f0247ab5348 "We should have sanitized the displayed resources. There is a bug", this=0x7ffc1844ccb0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qdebug.h:153
#11 ResourcesProxyModel::removeDuplicates (this=this@entry=0x3f3a2f0, resources=...) at /workspace/build/libdiscover/resources/ResourcesProxyModel.cpp:134
#12 0x00007f0247a93c4b in ResourcesProxyModel::addResources (this=0x3f3a2f0, _res=...) at /workspace/build/libdiscover/resources/ResourcesProxyModel.cpp:179
#13 0x00007f0244c117b6 in QtPrivate::QSlotObjectBase::call (a=0x7ffc1844ce90, r=0x3f3a2f0, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:378
#14 QMetaObject::activate (sender=sender@entry=0x424b680, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffc1844ce90) at kernel/qobject.cpp:3749
#15 0x00007f0244c11d97 in QMetaObject::activate (sender=sender@entry=0x424b680, m=m@entry=0x7f0247ccd440 <ResultsStream::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffc1844ce90) at kernel/qobject.cpp:3628
#16 0x00007f0247aac842 in ResultsStream::resourcesFound (this=this@entry=0x424b680, _t1=...) at /workspace/build/obj-x86_64-linux-gnu/libdiscover/moc_AbstractResourcesBackend.cpp:141
#17 0x00007f0247a8c780 in AggregatedResultsStream::emitResults (this=0x424b680) at /workspace/build/libdiscover/resources/ResourcesModel.cpp:291
#18 0x00007f0244c117b6 in QtPrivate::QSlotObjectBase::call (a=0x7ffc1844cff0, r=0x424b680, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:378
#19 QMetaObject::activate (sender=sender@entry=0x424b6a0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffc1844cff0) at kernel/qobject.cpp:3749
#20 0x00007f0244c11d97 in QMetaObject::activate (sender=sender@entry=0x424b6a0, m=m@entry=0x7f0245040ec0 <QTimer::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffc1844cff0) at kernel/qobject.cpp:3628
#21 0x00007f0244c1dd47 in QTimer::timeout (this=this@entry=0x424b6a0, _t1=...) at .moc/moc_qtimer.cpp:200
#22 0x00007f0244c1e048 in QTimer::timerEvent (this=0x424b6a0, e=<optimized out>) at kernel/qtimer.cpp:255
#23 0x00007f0244c12483 in QObject::event (this=0x424b6a0, e=<optimized out>) at kernel/qobject.cpp:1268
#24 0x00007f02461e9acc in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x424b6a0, e=0x7ffc1844d2e0) at kernel/qapplication.cpp:3732
#25 0x00007f02461f1417 in QApplication::notify (this=0x7ffc1844d630, receiver=0x424b6a0, e=0x7ffc1844d2e0) at kernel/qapplication.cpp:3491
#26 0x00007f0244be43c8 in QCoreApplication::notifyInternal2 (receiver=0x424b6a0, event=event@entry=0x7ffc1844d2e0) at kernel/qcoreapplication.cpp:1044
#27 0x00007f0244c3a97e in QCoreApplication::sendEvent (event=0x7ffc1844d2e0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#28 QTimerInfoList::activateTimers (this=0x23765d0) at kernel/qtimerinfo_unix.cpp:643
#29 0x00007f0244c3b201 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:182
#30 0x00007f023ed58197 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f023ed583f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f023ed5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f0244c3b5af in QEventDispatcherGlib::processEvents (this=this@entry=0x2376650, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#34 0x00007f0237ee21a1 in QPAEventDispatcherGlib::processEvents (this=0x2376650, flags=...) at qeventdispatcher_glib.cpp:69
#35 0x00007f0244be264a in QEventLoop::exec (this=this@entry=0x7ffc1844d550, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#36 0x00007f0244beb854 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1332
#37 0x00007f0245a3983c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1687
#38 0x00007f02461e9a25 in QApplication::exec () at kernel/qapplication.cpp:2917
#39 0x0000000000411f5f in main (argc=3, argv=<optimized out>) at /workspace/build/discover/main.cpp:156

Reported using DrKonqi
Comment 1 Aleix Pol 2018-05-18 15:23:12 UTC
Do you still have this issue with 5.12.5(.1)?
Comment 2 Aleix Pol 2018-06-01 16:12:27 UTC
*** Bug 392386 has been marked as a duplicate of this bug. ***
Comment 3 Aleix Pol 2018-06-01 16:12:56 UTC
*** Bug 390926 has been marked as a duplicate of this bug. ***
Comment 4 Aleix Pol 2018-06-01 16:13:27 UTC
Git commit 71cea8baad0b6f1a7433b04ecffc812c1eaf1422 by Aleix Pol.
Committed on 01/06/2018 at 16:12.
Pushed by apol into branch 'Plasma/5.12'.

Make sure we always remove duplicates before inserting

Otherwise we may introduce such duplicates on some code paths.

M  +9    -4    libdiscover/resources/ResourcesProxyModel.cpp

https://commits.kde.org/discover/71cea8baad0b6f1a7433b04ecffc812c1eaf1422